--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/devRafaCoelho/automation-test-cases#readme",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
+    "aws-sdk": "^2.1510.0",
     "exceljs": "^4.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
