created upload file

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 API_PORT = 8000
+
+KEY_ID = '004713d406013210000000003'
+KEY_NAME = 'automationtestcase'
+APP_KEY = 'K004ugX2W8BkTs0cy+tWmn4zywaZnTA' 
+ENDPOINT_S3 = 's3.us-west-004.backblazeb2.com'
+BACKBLAZE_BUCKET = 'automation-test-case' 
