--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "aws-sdk": "^2.1510.0",
+    "axios": "^1.6.2",
     "exceljs": "^4.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
